--- a/SportsLeagueDB/SportsLeagueDB/SportsLeagueDB.csproj
+++ b/SportsLeagueDB/SportsLeagueDB/SportsLeagueDB.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
@@ -21,7 +22,6 @@
 
   <ItemGroup>
     <Folder Include="SportsLeagueDB.Tests\" />
-    <Folder Include="SportsLeagueDB.Infrastructure\Configurations\" />
   </ItemGroup>
 
 </Project>
